--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             
         </div>
         <ul>
-            <img src="https://i.ytimg.com/an_webp/E0079PAMfvc/mqdefault_6s.webp?du=3000&sqp=CISajIsG&rs=AOn4CLCpnvKXNzGKOg5_69boDETPd1UFyA" id="img-1">
+            <img src="https://i.ytimg.com/vi/E0079PAMfvc/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLC_MBEENX1xdQRel0AReBpc7gBv8A" id="img-1">
             <li id="video-1"><a href="https://youtu.be/E0079PAMfvc" target="blank">Numero 1</a></li>
             <p><a href="https://www.youtube.com/channel/UCtQ58rSf87aJY1RWMvYFcvg"   target="blank" id="creditos-1">Creditos</a></p>
-            <img src="https://i.ytimg.com/an_webp/FKOFRa6Qyqg/mqdefault_6s.webp?du=3000&sqp=CNijjIsG&rs=AOn4CLAHcHMxUJPAK05v0MP9MaVNPQxa9w" id="img-2">
+            <img src="https://i.ytimg.com/an_webp/FKOFRa6Qyqg/mqdefault_6s.webp?du=3000&sqp=CNDHjosG&rs=AOn4CLAnhmQtOoKwAPdYaxTC5F9_s1CWCg" id="img-2">
             <li id="video-2"><a href="https://youtu.be/FKOFRa6Qyqg" target="blank">Numero 2</a></li>
             <p><a href="https://www.youtube.com/channel/UC_Bg8Qj9Qmbh0IP46OnG6Rw" target="blank" id="creditos-2">Creditos</a></p>
         </ul>
